# sift

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: design_decisions.md  gmail_setup.md  oauth_integration.md  providers.md  voice_example.md
docs/voice_demo/: learned_profile.md
evals/: conftest.py  last_provider_comparison.json  last_provider_comparison.md  last_run.md  last_run_drafter.md  metrics.py  test_classifier.py  test_drafter.py  test_provider_comparison.py
evals/fixtures/: labeled_threads.json
scripts/: check_providers.py
src/: app.py
src/sift/: brief.py  cache.py  classifier.py  cli.py  config.py  drafter.py  fixtures.py  gmail_client.py  llm.py  models.py  voice.py
src/sift/prompts/: brief.md  classify.md  draft.md  voice.md
src/sift/providers/: __init__.py  anthropic.py  base.py  google.py  openai_compat.py  registry.py
tests/: test_cache.py  test_drafter.py  test_gmail_client.py  test_voice.py
